
cc_library(
	name = "log",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_type_index//:type_index",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_atomic//:atomic",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_date_time//:date_time",
		"@com_github_bazelboost_thread//:thread",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_winapi//:winapi",
		"@com_github_bazelboost_locale//:locale",
		"@com_github_bazelboost_phoenix//:phoenix",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_filesystem//:filesystem",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_system//:system",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_function_types//:function_types",
		"@com_github_bazelboost_parameter//:parameter",
		"@com_github_bazelboost_proto//:proto",
		"@com_github_bazelboost_bind//:bind",
		"@com_github_bazelboost_intrusive//:intrusive",
		"@com_github_bazelboost_exception//:exception",
		"@com_github_bazelboost_regex//:regex",
		"@com_github_bazelboost_spirit//:spirit",
		"@com_github_bazelboost_xpressive//:xpressive",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_property_tree//:property_tree",
		"@com_github_bazelboost_array//:array"
	],
)
