load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/log/*.hpp",
    "include/boost/log/attributes/*.hpp",
    "include/boost/log/core/*.hpp",
    "include/boost/log/expressions/*.hpp",
    "include/boost/log/expressions/formatters/*.hpp",
    "include/boost/log/expressions/predicates/*.hpp",
    "include/boost/log/keywords/*.hpp",
    "include/boost/log/sinks/*.hpp",
    "include/boost/log/sources/*.hpp",
    "include/boost/log/support/*.hpp",
    "include/boost/log/utility/*.hpp",
    "include/boost/log/utility/functional/*.hpp",
    "include/boost/log/utility/ipc/*.hpp",
    "include/boost/log/utility/manipulators/*.hpp",
    "include/boost/log/utility/setup/*.hpp",
    "include/boost/log/utility/type_dispatch/*.hpp",
]

cc_library(
    name = "log_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "log",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":log_internal"],
)
